feat: added get and update endpoints for users
