# docs/swagger.yaml
@@ -113,12 +113,6 @@ definitions:
         example: miles
         type: string
     type: object
-  models.CardUpdateRequest:
-    properties:
-      value:
-        example: 100
-        type: number
-    type: object
   models.HTTPError:
     properties:
       code:
@@ -184,6 +178,70 @@ definitions:
         items:
           $ref: '#/definitions/models.Transaction'
         type: array
+    type: object
+  models.User:
+    properties:
+      cards:
+        items:
+          type: string
+        type: array
+      cashback:
+        type: number
+      created_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        maxLength: 100
+        minLength: 2
+        type: string
+      last_name:
+        maxLength: 100
+        minLength: 2
+        type: string
+      miles:
+        type: number
+      password:
+        minLength: 6
+        type: string
+      phone:
+        type: string
+      points:
+        type: number
+      refresh_token:
+        type: string
+      token:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    required:
+    - email
+    - first_name
+    - last_name
+    - password
+    - phone
+    type: object
+  models.UserUpdateRequest:
+    properties:
+      cards:
+        items:
+          type: string
+        type: array
+      email:
+        type: string
+      first_name:
+        maxLength: 100
+        minLength: 2
+        type: string
+      last_name:
+        maxLength: 100
+        minLength: 2
+        type: string
+      password:
+        minLength: 6
+        type: string
     type: object
 info:
   contact: {}
@@ -541,7 +599,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.CardUpdateRequest'
+            $ref: '#/definitions/models.Card'
         "400":
           description: Bad Request
           schema:
@@ -607,7 +665,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Retrieve all transaction records
+      description: Update a Specific Transaction
       parameters:
       - description: Bearer eyJhb...
         in: header
@@ -630,7 +688,7 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/models.HTTPError'
-      summary: Retrieve Transactions of all Users
+      summary: Update Transaction
       tags:
       - transaction
   /transaction/{user_id}:
@@ -714,6 +772,118 @@ paths:
       summary: Create Transactions for User
       tags:
       - transaction
+  /user:
+    get:
+      consumes:
+      - application/json
+      description: retrieve all Registered Users
+      parameters:
+      - description: Bearer eyJhb...
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - default: 100
+        description: maximum records per page
+        in: query
+        minimum: 0
+        name: limit
+        type: integer
+      - default: 0
+        description: page of records, starts from 0
+        in: query
+        minimum: 0
+        name: page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      summary: Get all Users
+      tags:
+      - user
+  /user/{email}:
+    get:
+      consumes:
+      - application/json
+      description: retrieve Specific registered User
+      parameters:
+      - description: Bearer eyJhb...
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: email
+        in: path
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      summary: Get a User
+      tags:
+      - user
+    put:
+      consumes:
+      - application/json
+      description: Update a specific User
+      parameters:
+      - description: Bearer eyJhb...
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: email
+        in: path
+        name: email
+        required: true
+        type: string
+      - description: card
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      summary: Update User
+      tags:
+      - user
 securityDefinitions:
   BearerAuth:
     in: header
