# models/auth.go
@@ -47,8 +47,16 @@ type User struct {
 	RefreshToken *string            `json:"refresh_token" bson:"refresh_token"`
 	CreatedAt    time.Time          `json:"created_at" bson:"created_at"`
 	UpdatedAt    time.Time          `json:"updated_at" bson:"updated_at"`
-	Card         []string           `json:"cards,omitempty" bson:"cards"`
-	Points       float64            `json:"points,omitempty" bson:"points"`
-	Miles        float64            `json:"miles,omitempty" bson:"miles"`
-	Cashback     float64            `json:"cashback,omitempty" bson:"cashback"`
+	Card         []string           `json:"cards" bson:"cards"`
+	Points       float64            `json:"points" bson:"points"`
+	Miles        float64            `json:"miles" bson:"miles"`
+	Cashback     float64            `json:"cashback" bson:"cashback"`
+}
+
+type UserUpdateRequest struct {
+	FirstName    *string            `json:"first_name" bson:"first_name" validate:"min=2,max=100"`
+	LastName     *string            `json:"last_name" bson:"last_name" validate:"min=2,max=100"`
+	Password     *string            `json:"password" bson:"password" validate:"min=6"`
+	Email        *string            `json:"email" bson:"email" validate:"email"`
+	Card         []string           `json:"cards" bson:"cards"`
 }
